@@ -1,0 +1,2 @@
+# figure files
+*.png
