@@ -1,4 +1,4 @@
-# This file was generated by ViZDoom 1.1.0 (ZDOOM 2.8.1) on Sun Jan 29 18:31:21 2017
+# This file was generated by ViZDoom 1.1.0 (ZDOOM 2.8.1) on Tue Jan 31 13:19:26 2017
 
 # These are the directories to automatically search for IWADs.
 # Each directory should be on a separate line, preceded by Path=
@@ -260,7 +260,7 @@ vid_adapter=0
 mouse_capturemode=1
 m_filter=false
 m_noprescale=false
-use_mouse=true
+use_mouse=false
 vid_winscale=1
 fullscreen=false
 vid_maxfps=200
