@@ -1,9 +1,9 @@
 
-#Visual-Doom-AI: doom2_singleplayer.cfg
+#Visual-Doom-AI: doom1_singleplayer.cfg
 #Authors: Rafael Zamora, Lauren An, William Steele, Joshua Hidayat
-#Last Updated: 1/29/17
+#Last Updated: 1/31/17
 
-#This script is used to configure the VizDoom engine to Doom2 single player.
+#This script is used to configure the VizDoom engine to Doom1 single player.
 
 #General Game Configurations
 doom_game_path = ../wads/Doom1.wad
@@ -39,6 +39,7 @@ available_buttons =
 {
 	ATTACK
 	USE
+	SPEED
 	MOVE_FORWARD
 	MOVE_BACKWARD
 	MOVE_RIGHT
