@@ -1,13 +1,13 @@
 
 #Visual-Doom-AI: doom2_singleplayer.cfg
 #Authors: Rafael Zamora, Lauren An, William Steele, Joshua Hidayat
-#Last Updated: 1/29/17
+#Last Updated: 1/31/17
 
 #This script is used to configure the VizDoom engine to Doom2 single player.
 
 #General Game Configurations
-doom_game_path = ../wads/Doom1.wad
-doom_scenario_path = ../wads/Doom1.wad
+doom_game_path = ../wads/Doom2.wad
+doom_scenario_path = ../wads/Doom2.wad
 doom_skill = 1
 mode = PLAYER
 seed = 6012345
@@ -39,6 +39,7 @@ available_buttons =
 {
 	ATTACK
 	USE
+	SPEED
 	MOVE_FORWARD
 	MOVE_BACKWARD
 	MOVE_RIGHT
